<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background">
    
    <TextView
        android:id="@+id/logTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textColor="@color/main"
        android:fontFamily="sans-serif-light"
        android:textSize="22dp" />
    
     <View
        android:id="@+id/logSplit1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/logTitle"
        android:layout_marginLeft="@dimen/margin_line"
        android:layout_marginRight="@dimen/margin_line"
        android:layout_marginTop="15dp"
        android:background="@color/main" />

  <!--   
     
    <View
        android:id="@+id/tutLogSplit2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tutGenImage"
        android:layout_marginLeft="@dimen/margin_line"
        android:layout_marginRight="@dimen/margin_line"
        android:layout_marginTop="20dp"
        android:background="@color/main" /> 
        -->

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_side"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"

         android:orientation="vertical"
         android:background="@drawable/login_box" >
         
         <ImageView
        android:id="@+id/tutGenImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:layout_marginTop="@dimen/marign_top"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

         <EditText
             android:id="@+id/logUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_side"
             android:layout_marginRight="@dimen/margin_side"
             android:layout_marginTop="10dp"
             android:hint="@string/username"
             android:ems="10" >
         </EditText>

         <EditText
             android:id="@+id/logPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_side"
             android:layout_marginRight="@dimen/margin_side"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword" />

         <Button
             android:id="@+id/logBLogin"
             android:layout_width="fill_parent"
             android:layout_height="60dp"
             android:layout_marginTop="@dimen/marign_top"
             android:background="@drawable/buttonselect"
             android:text="@string/login"
             android:textColor="@android:color/white" />
     </LinearLayout>
   
</RelativeLayout>
