<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/tutStartLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <View
        android:id="@+id/tutStartSplit1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tutStartLogo"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:background="@color/main" />
    <TextView
        android:id="@+id/tutStartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tutStartSplit1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/app_name"
        android:textColor="@color/main"
        android:fontFamily="sans-serif-light"
        android:textSize="22dp" />
    
     <View
        android:id="@+id/tutStartSplit2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tutStartTitle"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@color/main" />

    <TextView
        android:id="@+id/tut1Text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tutStartSplit2"
        android:padding="25dp"
        android:fontFamily="sans-serif-light"
       	android:textSize="18dp"
        android:text="Dieser Text muss noch geschreiben werden" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:weightSum="2" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <View
                android:id="@+id/tut1SplitBottom"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@android:color/white"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <Button
                android:id="@+id/tutStartButLogin"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@+id/tut1SplitBottom"
                android:layout_weight="1"
                android:background="@drawable/buttonselect"
                android:text="@string/action_last"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <Button
            android:id="@+id/tutStartButNext"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonselect"
            android:text="@string/action_next"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>